--- a/404.html
+++ b/404.html
@@ -1,2 +1,12 @@
-<h1>Matthew's Personal Website</h1>
-<p>Welcome to my site!</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Matthew's Personal Website</title>
+  </head>
+  <body>
+    <h1>Matthew's Personal Website</h1>
+    <p>Welcome to my site!</p>
+  </body>
+</html>
